--- a/app/src/main/res/values/theme_jellyfin.xml
+++ b/app/src/main/res/values/theme_jellyfin.xml
@@ -8,7 +8,7 @@
         <item name="android:colorAccent">@color/jellyfin_blue</item>
         <!-- Background resource or color -->
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="defaultBackground">@color/not_quite_black</item>
+        <item name="defaultBackground">@drawable/bg</item>
         <!-- Background color for CardViews -->
         <item name="cardImageBackground">@color/grey</item>
         <item name="cardViewBackground">@android:color/transparent</item>
